--- a/01-Tri-Council-Open-Access.ipynb
+++ b/01-Tri-Council-Open-Access.ipynb
@@ -19,7 +19,7 @@
     }
    },
    "source": [
-    "# Tri-Council Compliance\n",
+    "# Compliance with Tri-Council open access policy\n",
     "\n"
    ]
   },
@@ -41,21 +41,6 @@
     "</div>  \n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Policy Objective\n",
-    "\n",
-    "<div class=\"alert alert-success\">\n",
-    "    The objective of this policy is to improve access to the results of Agency-funded research, and to increase the dissemination and exchange of research results. All researchers, regardless of funding support, are encouraged to adhere to this policy.\n",
-    "</div>"
    ]
   },
   {
