--- a/03-Preregistration.ipynb
+++ b/03-Preregistration.ipynb
@@ -24,8 +24,10 @@
     "- Specifying to your plan in advance, before you gather data. \n",
     "- Preregistration separates hypothesis-generating  (exploratory) from hypothesis-testing (confirmatory) research \n",
     "    - Both are important. \n",
-    "    - The same data cannot be used to generate and test a hypothesis\n",
-    "    - Happens often, often happens unintentionally, and reduces the credibility of you and your results  \n",
+    "- The same data cannot be used to generate and test a hypothesis\n",
+    "    - Nevertheless in reality, this appens often\n",
+    "    - This often happens unintentionally\n",
+    "    - The consequence is that it reduces the credibility of you as a scientist and your results  \n",
     "- Addressing this problem through planning:\n",
     "    - Improves the quality and transparency of your research\n",
     "    - Helps others who may wish to build on it"
@@ -42,8 +44,7 @@
     "# Why would I preregister a study?\n",
     "\n",
     "- Increase reproducibility\n",
-    "- Increase trust in research by being transparant\n",
-    "    - Separate exploratory and confirmatory research\n",
+    "- Increase trust in research by being transparent\n",
     "- Fight against Questionable Research Practices"
    ]
   },
@@ -58,7 +59,7 @@
     "## I am not doing anything wrong.  Why should I waste my time?\n",
     "\n",
     "- This isn't about paying a pennance for doing something wrong  \n",
-    "- This is about taking collective action against those using Questionable Research Practices \n",
+    "- This is about taking collective action against Questionable Research Practices \n",
     "\n",
     "#### Leading by example\n",
     "- By voluntarily being transparant about research practices, we can:  \n",
@@ -271,13 +272,6 @@
    "source": [
     "# Questions and Discussion"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
