--- a/03-Preregistration.ipynb
+++ b/03-Preregistration.ipynb
@@ -8,7 +8,9 @@
     }
    },
    "source": [
-    "# Preregistration"
+    "# Preregistration\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -270,8 +272,27 @@
     }
    },
    "source": [
+    "\n",
+    "Mostly adapted from: Nosek, B. A., Ebersole, C. R., DeHaven, A. C., & Mellor, D. T. (2018). The preregistration revolution. Proceedings of the National Academy of Sciences, 115(11), 2600-2606.f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Questions and Discussion"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
