--- a/Open-Access-Data.ipynb
+++ b/Open-Access-Data.ipynb
@@ -23,11 +23,19 @@
    "source": [
     "# Open data is\n",
     "\n",
-    "- Available: the data should be in whole, downloadable from the Internet, with no costs apart from reproduction fees\n",
-    "- Accessible: the data should be provided in a convenient form that can be modified\n",
-    "- Reusable: this should be expressed under terms provided with the data\n",
-    "- Redistributable: the data can be combined with data from other research\n",
-    "- Unrestricted: everyone can use, modify, and share the data, regardless of how they use the data (e.g. for commercial, non-commercial, or educational purposes)\n"
+    "- Available\n",
+    "    - the data should be\n",
+    "        - in whole, \n",
+    "        - downloadable from the Internet\n",
+    "        - with no costs apart from reproduction fees\n",
+    "- Accessible\n",
+    "    - the data should be provided in a convenient form that can be modified\n",
+    "- Reusable:\n",
+    "    - this should be expressed under terms provided with the data\n",
+    "- Redistributable\n",
+    "    - the data can be combined with data from other research\n",
+    "- Unrestricted\n",
+    "    - everyone can use, modify, and share the data, regardless of how they use the data (e.g. for commercial, non-commercial, or educational purposes)\n"
    ]
   },
   {
@@ -65,7 +73,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# You already benefit tremendously from open data\n",
     "- GPS  \n",
@@ -208,16 +220,27 @@
    },
    "source": [
     "# Anaconda \n",
-    "    - <a href=\"https://www.anaconda.com\">Anaconda</a> is a scientific Python distribution\n",
-    "    - <a href=\"https://jupyter.org/\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis  \n",
-    "        - Support for Python, R, Julia, and other languages  \n",
-    "        - This presentation was written in Jupyter notebook\n",
-    "    - Spyder is an IDE modelled after MatLab\n",
-    "        - Also check out <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a>\n",
-    "            - Pycharm professional (free to academics) has Science Mode  \n",
-    "    \n",
-    "    \n",
-    " <img src=\"img/jupyter-demo.png\" width=75%>"
+    "\n",
+    "<table>\n",
+    "    <td style=\"text-align:left\">\n",
+    "        <ul>\n",
+    "            <li><h2><a href=\"https://www.anaconda.com\">Anaconda</a> is a scientific Python distribution</h2></li>\n",
+    "            <li><h2><a href=\"https://jupyter.org/\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis</h2></li>  \n",
+    "            <ul>\n",
+    "                <li><h2>Support for Python, R, Julia, and other languages</h2></li>  \n",
+    "                <li><h2>This presentation was written in Jupyter notebook</h2></li>\n",
+    "            </ul>\n",
+    "            <li><h2>Spyder is an IDE modelled after MatLab</h2></li>\n",
+    "                <ul>\n",
+    "                    <li><h2>Also check out <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a></h2></li>\n",
+    "                    <li><h2>Pycharm professional (free to academics) has Science Mode</h2></li>  \n",
+    "                </ul>\n",
+    "        </ul>\n",
+    "    </td>\n",
+    "    <td>    \n",
+    "        <img src=\"img/jupyter-demo.png\">\n",
+    "    </td>\n",
+    "</table></h2>"
    ]
   },
   {
@@ -231,7 +254,7 @@
     "- <a href=\"https://www.rstudio.com/\">RStudio Markdom (Rmd)</a>  \n",
     "    - Support for R, Python, and other languages  \n",
     "    - Use codeblocks to create detailed explanations of data processing and analysis    \n",
-    "<img src=\"img/notebook-demo.png\">"
+    "<img src=\"img/notebook-demo.png\" width=50%>"
    ]
   },
   {
@@ -242,12 +265,14 @@
     }
    },
    "source": [
-    "- <a href=\"https://rubenarslan.github.io/codebook/articles/codebook.html\">Codebook</a>  \n",
-    "    - automate the following tasks to describe data frames:  \n",
-    "        - Summarise the distributions, and labelled missings of variables graphically and using descriptive statistics\n",
-    "        - For surveys, compute and summarise reliabilities (internal consistencies, retest, multilevel) for psychological scales. \n",
-    "        - Combine this information with metadata (such as item labels and labelled values) that is derived from R attributes. \n",
-    "        - Generate HTML, PDF, and Word documents\n"
+    "<h1><a href=\"https://rubenarslan.github.io/codebook/articles/codebook.html\">Codebook</a></h1>  \n",
+    "\n",
+    "\n",
+    "- automate the following tasks to describe data frames:  \n",
+    "    - Summarise the distributions, and labelled missings of variables graphically and using descriptive statistics\n",
+    "    - For surveys, compute and summarise reliabilities (internal consistencies, retest, multilevel) for psychological scales. \n",
+    "    - Combine this information with metadata (such as item labels and labelled values) that is derived from R attributes. \n",
+    "    - Generate HTML, PDF, and Word documents\n"
    ]
   },
   {
@@ -258,11 +283,19 @@
     }
    },
    "source": [
-    "- <a href=\"https://github.com/\">Github</a>\n",
-    "    - A version tracking open access repository for code  \n",
-    "    - You can post smaller datasets on Github\n",
-    "    - You can host websites that explain your data and analysis:\n",
-    "        - e.g. <a href=\"https://rubenarslan.github.io/ovulatory_shifts/#table-of-contents\">Ruben Arslan's Ovulagory Shifts site</a>"
+    "<center><a href=\"https://github.com/\"><img src=\"img/github.jpg\" width=25%></a></center>\n",
+    "<ul>\n",
+    "    <li> A version tracking open access repository for code  </li>\n",
+    "    <li> You can post datasets on Github</li>\n",
+    "    <li> You can host websites that explain your data and analysis:</li>\n",
+    "        <ul>\n",
+    "            <li>- e.g. <a href=\"https://rubenarslan.github.io/ovulatory_shifts/#table-of-contents\">Ruben Arslan's Ovulagory Shifts site</a>\n",
+    "            </li>\n",
+    "        </ul>\n",
+    "    <li><a href=\"https://github.com/collections/open-data\">GitHub open data collection</a></li>\n",
+    "</ul>\n",
+    "\n",
+    "    "
    ]
   },
   {
