open-access-stimuli

--- a/Open-Access-Data.ipynb
+++ b/Open-Access-Data.ipynb
@@ -128,16 +128,31 @@
    },
    "source": [
     "# Best practices in making data available\n",
-    "- Good \n",
-    "    - Post final data set\n",
-    "- Better \n",
-    "    - Post raw data\n",
-    "- Best\n",
-    "    - Post raw data\n",
-    "        - Show how you get from raw data to analysis\n",
-    "        - codebook\n",
-    "        - well commented analysis files \n",
-    "        - Post data with preprint before submitting to journal"
+    "<table>\n",
+    "    <td style=\"text-align:left\">\n",
+    "        <ul>\n",
+    "            <li><font size=\"+1\">Good</li>\n",
+    "                <ul>\n",
+    "                    <li><font size=\"+1\">Post final data set</li>\n",
+    "                </ul>\n",
+    "            <li><font size=\"+1\">Better</li>\n",
+    "                <ul>\n",
+    "                    <li><font size=\"+1\">Post raw data</li>\n",
+    "                </ul>\n",
+    "            <li>Best </li>\n",
+    "                <ul>\n",
+    "                    <li><font size=\"+1\">Post raw data</li>\n",
+    "                    <li><font size=\"+1\">Show how you get from raw data to analysis</li>\n",
+    "                    <li><font size=\"+1\">Include a codebook</li>\n",
+    "                    <li><font size=\"+1\">Comment all code extensively</li>\n",
+    "                    <li><font size=\"+1\">Post data with preprint</li>\n",
+    "                </ul>\n",
+    "        </ul>\n",
+    "    </td>\n",
+    "    <td><img src=\"img/good_better_best.jpg\" width=70%>\n",
+    "    </td>\n",
+    "</table>\n",
+    "        "
    ]
   },
   {
@@ -172,33 +187,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# More proprietary formats and alternatives\n",
-    "<img src=\"img/formats2.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Always use raw, uncompressed data\n",
-    "\n",
-    "## Data is lost and/or altered when compressing.\n",
-    "\n",
-    "<table><td><img src=\"img/img43.jpg\"></td><td><img src=\"img/img44.jpg\"></td><td><img src=\"img/img45.jpg\"></td></table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -224,16 +212,16 @@
     "<table>\n",
     "    <td style=\"text-align:left\">\n",
     "        <ul>\n",
-    "            <li><h2><a href=\"https://www.anaconda.com\">Anaconda</a> is a scientific Python distribution</h2></li>\n",
-    "            <li><h2><a href=\"https://jupyter.org/\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis</h2></li>  \n",
+    "            <li><font size=\"+2\"><a href=\"https://www.anaconda.com\">Anaconda</a> is a scientific Python distribution</font></li>\n",
+    "            <li><font size=\"+2\"><a href=\"https://jupyter.org/\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis</font></li>  \n",
     "            <ul>\n",
-    "                <li><h2>Support for Python, R, Julia, and other languages</h2></li>  \n",
-    "                <li><h2>This presentation was written in Jupyter notebook</h2></li>\n",
+    "                <li><font size=\"+2\">Support for Python, R, Julia, and other languages</font></li>  \n",
+    "                <li><font size=\"+2\">This presentation was written in Jupyter notebook</font></li>\n",
     "            </ul>\n",
-    "            <li><h2>Spyder is an IDE modelled after MatLab</h2></li>\n",
+    "            <li><font size=\"+2\">Spyder is an IDE modelled after MatLab</font></li>\n",
     "                <ul>\n",
-    "                    <li><h2>Also check out <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a></h2></li>\n",
-    "                    <li><h2>Pycharm professional (free to academics) has Science Mode</h2></li>  \n",
+    "                    <li><font size=\"+2\">Also check out <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a></font></li>\n",
+    "                    <li><font size=\"+2\">Pycharm professional (free to academics) has Science Mode</font></li>  \n",
     "                </ul>\n",
     "        </ul>\n",
     "    </td>\n",
@@ -251,10 +239,18 @@
     }
    },
    "source": [
-    "- <a href=\"https://www.rstudio.com/\">RStudio Markdom (Rmd)</a>  \n",
-    "    - Support for R, Python, and other languages  \n",
-    "    - Use codeblocks to create detailed explanations of data processing and analysis    \n",
-    "<img src=\"img/notebook-demo.png\" width=50%>"
+    "<table>\n",
+    "    <td style=\"text-align:left\">\n",
+    "        <ul>\n",
+    "            <li><a href=\"https://www.rstudio.com/\"><font size=\"+2\">RStudio Markdom (Rmd)</font></a></li>\n",
+    "            <li><font size=\"+2\">Support for R, Python, and other languages</font></li>\n",
+    "            <li><font size=\"+2\">Use codeblocks to create detailed explanations of data processing and analysis</font></li>\n",
+    "        </ul>\n",
+    "    </td>\n",
+    "    <td>\n",
+    "        <img src=\"img/notebook-demo.png\">\n",
+    "    </td>\n",
+    "</table>"
    ]
   },
   {
