open-access-statistics

--- a/06-Open-Stimuli.ipynb
+++ b/06-Open-Stimuli.ipynb
@@ -64,9 +64,9 @@
    "source": [
     "# Ethics and open access stimuli\n",
     "\n",
-    "- Make sure you apply for ethics approval to post data online in open access repositories\n",
+    "- Make sure you apply for ethics approval to post stimuli online in open access repositories\n",
     "    - You can always write an amendment \n",
-    "- It is important to follow your ethics guidelines and anonymize data before it is posted online  "
+    "- It is important to follow your ethics guidelines"
    ]
   },
   {
