open-access-statistics

--- a/07-Reproducible-Statistics.ipynb
+++ b/07-Reproducible-Statistics.ipynb
@@ -39,9 +39,6 @@
    "source": [
     "# Most of these issues can be resolved by switching away from graphic interfaces and utilizing commmand-line based software.\n",
     "- I'm not here to push coding, R, or Python\n",
-    "- R and Python are superior resources\n",
-    "    - Extensive communities\n",
-    "    - Large number of extensions and libraries\n",
     "- There can be a high learning curve\n",
     "- Comfort with coding shouldn't preclude Open Science"
    ]
@@ -98,6 +95,24 @@
     "\n",
     "IFrame(src='https://libguides.library.kent.edu/SPSS/Syntax', width=1000, height=600)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# R, Julia, and Python are superior resources\n",
+    "- Extensive online communities\n",
+    "- Large number of extensions and libraries\n",
+    "- Free resources\n",
+    "- Large amount of content geared to help beginners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
