--- a/01-Tri-Council-Open-Access.ipynb
+++ b/01-Tri-Council-Open-Access.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PNB Summer Open Science Workshop\n",
+    "<center> <h1> PNB Summer Open Science Workshop </h1></center></br>\n",
+    "<h1></h1>\n",
     "\n",
+    "<center><img src =\"img/mcm-sci-pnb_left-col_eps.png\"></center>\n",
     "<center><img src =\"img/open_science_venn.jpg\" width=60%></center>\n",
-    "\n",
     "Hosted by David R. Feinberg, PhD"
    ]
   },
@@ -200,10 +201,10 @@
     "\n",
     "<div>\n",
     "<h2>Publishers' Open Access article processing charges in USD</h2>  \n",
-    "    \n",
-    "- Journal of Neuroscience \\\\$3,085 USD  \n",
-    "\n",
-    "- Cell \\\\$5000 USD  \n",
+    "</br>\n",
+    "<h3>A few examples dear to home...</h3>\n",
+    "<li> Journal of Neuroscience \\$3,085 USD  </li>\n",
+    "<li>  Cell \\$5000 USD  </li>\n",
     "\n",
     "<table border=\"1\" cellpadding=\"1\" cellspacing=\"1\" style=\"width: 500px;\"><thead><tr><th scope=\"col\">Publisher</th>\n",
     "<th scope=\"col\">APC from</th>\n",
