--- a/03-Preregistration.ipynb
+++ b/03-Preregistration.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "# An example preregistration of a study of mine\n",
     "\n",
-    "<a href=\"https://osf.io/pdwcb\">Automate Formant Ceiling</a>"
+    "<a href=\"https://osf.io/pdwcb\" target=\"_blank\">Automate Formant Ceiling</a>"
    ]
   },
   {
@@ -120,8 +120,8 @@
     "    - you made a mistake in your procedure\n",
     "    - your algorithm parameters are unsuitible\n",
     " \n",
-    " ### Don't Panic, Document it\n",
-    "- With transparent reporting, readers can assess the deviations and their rationale"
+    " <H2> Don't Panic, Document it</H2>\n",
+    "<h3>With transparent reporting, readers can assess the deviations and their rationale</h3>"
    ]
   },
   {
@@ -286,13 +286,6 @@
    "source": [
     "# Questions and Discussion"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
