--- a/04-Registered-Reports.ipynb
+++ b/04-Registered-Reports.ipynb
@@ -97,7 +97,7 @@
     "# Registered Report Workflow\n",
     "\n",
     "\n",
-    "<img src= \"img/registered_report_workflow.png\" width=45%>"
+    "<img src= \"img/registered_report_workflow.png\" width=75%>"
    ]
   },
   {
@@ -111,8 +111,8 @@
     "# Registered Report Example\n",
     "\n",
     "\n",
-    "Here is an example of a preregistration of a registered report we have accepted in principle at Evolution and Human Behavior.  It also has a preprint.\n",
-    "https://osf.io/8hma7/\n",
+    "\n",
+    "<a href=\"https://osf.io/8hma7/\" target=\"_blank\"> Here</a>  is an example of a preregistration of a registered report we have accepted in principle at Evolution and Human Behavior.  It also has a preprint.\n",
     "\n"
    ]
   },
@@ -128,7 +128,7 @@
     "\n",
     "\n",
     "-----------\n",
-    "From: https://cos.io/rr/"
+    "Materials adapted from: https://cos.io/rr/"
    ]
   }
  ],
