--- a/06-Open-Stimuli.ipynb
+++ b/06-Open-Stimuli.ipynb
@@ -20,7 +20,7 @@
    },
    "source": [
     "# Why Share Stimuli?\n",
-    "</br></br>\n",
+    "  \n",
     "- Replication\n",
     "- Transparancy\n",
     "- New discoveries"
@@ -28,18 +28,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Where to Share Stimuli\n",
-    "\n",
-    "</br></br>\n",
-    "<li><font size=\"+1\"><a href=\"https://figshare.com/\">Open Science Framework</a></font></li>\n",
-    "<li><font size=\"+1\"><a href=\"https://figshare.com/\">Figshare</a></font></li>\n",
-    "<li><font size=\"+1\"><a href=\"https://github.com/\">GitHub</a></font></li>"
+    "# Why make stimuli open access if you already give stimuli freely to anyone that asks?\n",
+    "  \n",
+    "- Not everyone is okay to ask you\n",
+    "    - Shyness  \n",
+    "    - Fear  \n",
+    "    - Secrecy  \n",
+    "    - Language Barriers  \n",
+    "- Why be a barrier?  \n",
+    "- It's less work to make the stimuli availabe than to give them out"
    ]
   },
   {
@@ -50,8 +49,27 @@
     }
    },
    "source": [
-    "# You don't have to go to extremes, always remember...\n",
-    "<img src=\"img/good_better_best.jpg\">"
+    "# Why would you not want to share stimuli?\n",
+    "  \n",
+    "- You are not honest about how you made them  \n",
+    "    - Don't do this  \n",
+    "- You worked really hard on them \n",
+    "    - Don't want freeloaders coming along and benefiting without hard work  \n",
+    "        - Why make them reinvent the wheel?\n",
+    "        - They will be able to do hard work based on your work  \n",
+    "        - Why punish other researchers because your work required effort?  \n",
+    "        - Making others suffer because you did has no place in science.  \n",
+    "            - Science isn't Fight Club \n",
+    "    - You want credit  \n",
+    "        - If you make your stimuli open access, get at DOI  \n",
+    "            - Most repositories do this\n",
+    "        - If the stimuli are used without credit, report it\n",
+    "- You don't want your competition scoop you \n",
+    "    - Better they cite you for the stimuli than not at all  \n",
+    "    - You could make a new collaborator  \n",
+    "    - Science is for the collective good of all  \n",
+    "    - This is bad for science  \n",
+    "    "
    ]
   },
   {
@@ -92,7 +110,7 @@
     }
    },
    "source": [
-    "# Some preferred formats for stimuli\n",
+    "# Some preferred formats for stimuli & data\n",
     "<img src=\"img/formats2.png\">"
    ]
   },
@@ -110,29 +128,131 @@
     "- Document and share any stimuli creation techniques\n",
     "- Use code to generate stimuli wherever possible\n",
     "- Share code on websites like \n",
-    "    - <a href=\"https://github.com/\">GitHub</a>\n",
+    "    - <a href=\"https://dataverse.scholarsportal.info/dataverse/mcmaster/\" target=\"_blank\">McMaster Dataverse</a>\n",
+    "    - <a href=\"https://github.com/\" target=\"_blank\">GitHub</a>\n",
     "\n",
     "\n",
-    "In a replication, ideally, researchers should be able to regenerate the stimuli from scratch.  This should help detect any potential errors in stimuli generation."
+    "In a replication, ideally, researchers should be able to\n",
+    "- Replicate your work without your help\n",
+    "- Regenerate the stimuli from scratch using your methods"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "# Example 1 - Creating Audio Stimuli in praat-parselmouth:\n",
-    "## Making a voice an octave higher in pitch\n",
+    "# Use open access software to generate stimuli"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# Closed source software is bad for science because:  \n",
+    "\n",
+    "- Stimuli can be replicated only by those who can afford software\n",
+    "- Trade secrets lock true methods away from science\n",
+    "    - Nobody knows how it really works without being able to inspect the code\n",
+    "- Software cannot be altered or fixed for scientific purposes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Open Source Alternatives to common software used to generate stimuli\n",
+    "\n",
+    "- Psychophysics/Shapes/Sounds  \n",
+    "    - Shapes  \n",
+    "        - ePRIME/Presentation/MatLab -> PsychoPy  \n",
+    "    - Sounds -> PsychoPy/praat-parselmouth  \n",
+    "- Images  \n",
+    "    - Adobe Photoshop -> GIMP  \n",
+    "    - Adobe Illustrator -> Inkscape  \n",
+    "- Sounds  \n",
+    "    - Record & process\n",
+    "        - Adobe Audition/SoundForge -> Audacity/Praat  \n",
+    "    - Manipulate  \n",
+    "        - STRAIGHT/Praat/PsychoPy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Document how stimuli were created\n",
+    "  \n",
+    "- Go beyond the methods section\n",
+    "- Record button presses\n",
+    "- Record software settings\n",
+    "- Create detailed building plans and instructions\n",
+    "    - Show how you built your apparatus  \n",
+    "    - IKEA style drawings, etc.\n",
+    "- Use 3D printable parts so apparatus/3D stimluli can be replicated\n",
+    "    - We have several 3D printers available on campus already\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Where to post Open Access Stimuli\n",
+    "\n",
+    "</br></br>\n",
+    "<li><font size=\"+1\"><a href=\"https://dataverse.scholarsportal.info/dataverse/mcmaster/\" target=\"_blank\">McMaster Dataverse</a></font></li>\n",
+    "<li><font size=\"+1\"><a href=\"https://figshare.com/\" target=\"_blank\">Open Science Framework</a></font></li>\n",
+    "<li><font size=\"+1\"><a href=\"https://figshare.com/\" target=\"_blank\">Figshare</a></font></li>\n",
+    "<li><font size=\"+1\"><a href=\"https://github.com/\" target=\"_blank\">GitHub</a></font></li>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Use code to generate stimuli"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "## Example 1 - Creating Audio Stimuli \n",
+    "### Making a voice an octave higher in pitch in praat-parselmouth:\n",
     "\n",
     "First load the sound, and play it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -153,18 +273,17 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import parselmouth\n",
-    "sound = parselmouth.Sound(\"/home/david/Desktop/03-01-01-01-01-01-01.wav\")\n",
-    "\n",
+    "sound = parselmouth.Sound(\"/home/david/Desktop/03-01-01-01-01-01-01.wav\") # load sound\n",
     "\n",
     "from IPython.display import Audio\n",
-    "Audio(data=sound.values, rate=sound.sampling_frequency)"
+    "Audio(data=sound.values, rate=sound.sampling_frequency) # create Praat sound object"
    ]
   },
   {
@@ -175,39 +294,12 @@
     }
    },
    "source": [
-    "Extract the pitch tier from a manipulation object"
+    "### Make pitch octave higher"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from parselmouth.praat import call\n",
-    "\n",
-    "manipulation = call(sound, \"To Manipulation\", 0.001, 75, 600)\n",
-    "pitch_tier = call(manipulation, \"Extract pitch tier\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Multiply the pitch tier by 2, resynthesize, and play new sound"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -228,16 +320,20 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "call(pitch_tier, \"Multiply frequencies\", sound.xmin, sound.xmax, 2)\n",
-    "call([pitch_tier, manipulation], \"Replace pitch tier\")\n",
-    "sound_octave_up = call(manipulation, \"Get resynthesis (overlap-add)\")\n",
-    "Audio(data=sound_octave_up.values, rate=sound_octave_up.sampling_frequency)"
+    "from parselmouth.praat import call\n",
+    "\n",
+    "manipulation = call(sound, \"To Manipulation\", 0.001, 75, 600) # create manipulation object\n",
+    "pitch_tier = call(manipulation, \"Extract pitch tier\") # extract pitch tier\n",
+    "call(pitch_tier, \"Multiply frequencies\", sound.xmin, sound.xmax, 2) # mutiply freqeuncies\n",
+    "call([pitch_tier, manipulation], \"Replace pitch tier\") # replace pitch tier\n",
+    "sound_octave_up = call(manipulation, \"Get resynthesis (overlap-add)\") # resynthesize sound\n",
+    "Audio(data=sound_octave_up.values, rate=sound_octave_up.sampling_frequency) # play sound"
    ]
   },
   {
@@ -248,35 +344,26 @@
     }
    },
    "source": [
-    "# Example 2 - Generate visual stimuli in PsychoPy\n",
-    "## Create a visual grating and fixation point"
+    "## Example 2 - Generate visual stimuli in PsychoPy\n",
+    "### Create a visual grating and fixation point"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from psychopy import visual, core  # import some libraries from PsychoPy\n",
     "\n",
     "#create a window\n",
     "mywin = visual.Window([800,600], monitor=\"testMonitor\", units=\"deg\")\n",
     "\n",
-    "#create some stimuli\n",
+    "#create grating and fixation point\n",
     "grating = visual.GratingStim(win=mywin, mask=\"circle\", size=3, pos=[-4,0], sf=3)\n",
     "fixation = visual.GratingStim(win=mywin, size=0.5, pos=[0,0], sf=0, rgb=-1)\n",
     "\n",
@@ -293,13 +380,26 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"img/psychopy_stimuli.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "# Why stop at stimuli creation?\n",
     "\n",
-    "You can open access your code that runs your experiment. For example, PsychoPy has a website <a href=\"https://pavlovia.org/explore\">Pavlovia</a>, where you can upload your experiment code.  People can run the code and view the code on the site.\n",
+    "- Open access experiment code\n",
+    "    - PsychoPy has a website <a href=\"https://pavlovia.org/explore\" target=\"_blank\">Pavlovia</a>, where you can upload your experiment code.  \n",
+    "    - People can run the code and view the code on the site.\n",
     "\n",
     "Even if you use proprietary software, often you are writing some code that generates the experiment.  That code is your intellectual property and can be shared freely."
    ]
@@ -312,11 +412,21 @@
     }
    },
    "source": [
-    "# What if you can't make you stimuli by coding?\n",
+    "# What if you can't make you stimuli by coding or use closed-source software?\n",
     "\n",
-    "- You can always share the end product stimuli  \n",
-    "- Any level of stimuli sharing benefits science\n",
-    "\n",
+    "- You can always just share the end product stimuli  \n",
+    "- You could make a screen-capture video of you operating the software  \n",
+    "- Any level of stimuli sharing benefits science"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Always remember...\n",
     "<img src=\"img/good_better_best.jpg\" width=50%>"
    ]
