--- a/05-Open-Access-Data.ipynb
+++ b/05-Open-Access-Data.ipynb
@@ -112,11 +112,63 @@
    "source": [
     "## Where to make data available  \n",
     "\n",
-    "- <a href = \"https://macsphere.mcmaster.ca/\">Mac Sphere</a>    \n",
-    "- <a href=\"https://osf.io/\">Open Science Framework</a>\n",
-    "- <a href=\"http://oad.simmons.edu/oadwiki/Data_repositories\">Simmons list of open access Data Repositories</a>\n",
-    "- <a href=\"https://data.mendeley.com/\">Mendelay (owned by Elsevier)</a>\n",
-    "- <a href=\"http://www.science.gc.ca/eic/site/063.nsf/eng/h_94D49094.html\">Government of Canada Annex</a>"
+    "- <a href = \"https://learn.scholarsportal.info/all-guides/dataverse/\" target=\"_blank\">Mac Dataverse</a>    \n",
+    "- <a href=\"https://osf.io/\" target=\"_blank\">Open Science Framework</a>\n",
+    "- <a href=\"http://oad.simmons.edu/oadwiki/Data_repositories\" target=\"_blank\">Simmons list of open access Data Repositories</a>\n",
+    "- <a href=\"https://data.mendeley.com/\" target=\"_blank\">Mendelay (owned by Elsevier)</a>\n",
+    "- <a href=\"http://www.science.gc.ca/eic/site/063.nsf/eng/h_94D49094.html\" target=\"_blank\">Government of Canada Annex</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# <a href=\"https://learn.scholarsportal.info/all-guides/dataverse/\" target=\"_blank\">McMaster Dataverse</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\n",
+    "## Dataverse is in consortium with many universities globally  \n",
+    "- Deposit data\n",
+    "- Create metadata\n",
+    "- Release and share data openly or privately\n",
+    "- Visualize and explore data\n",
+    "- Search for data\n",
+    "- Get credit with a DOI\n",
+    "\n",
+    "<a href=\"https://dataverse.scholarsportal.info/dataset.xhtml?ownerId=41126\" target=\"_blank\">What it looks like to deposit data...</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "## What can you deposit?\n",
+    "- research data\n",
+    "- supplementary tables and documentation\n",
+    "- publications associated with data\n",
+    "- presentations\n",
+    "- stimuli \n",
+    "\n",
+    "- Any file type\n",
+    "\n",
+    "- Data Explorer feature\n",
+    "    - e.g. Stata, SPSS, R, Excel (xlsx) and CSV"
    ]
   },
   {
@@ -163,7 +215,7 @@
     }
    },
    "source": [
-    "# Don't use proprietary software or file formats\n",
+    "# Try not to use proprietary software or file formats\n",
     "\n",
     "- These formats\n",
     "    - can disappear when comanies decide\n",
@@ -193,10 +245,10 @@
    "source": [
     "# Tools to facilitate open access data\n",
     "\n",
-    "- <a href=\"https://jupyter.org/\">Anaconds's Jupyter Notebooks</a>  \n",
-    "- <a href=\"https://www.rstudio.com/\">RStudio Markdom (Rmd)</a>  \n",
-    "- <a href=\"https://cran.r-project.org/web/packages/codebook/index.html\">Codebook</a>  \n",
-    "- <a href=\"https://github.com/\">Github</a>\n"
+    "- <a href=\"https://jupyter.org/\" target=\"_blank\">Anaconds's Jupyter Notebooks</a>  \n",
+    "- <a href=\"https://www.rstudio.com/\" target=\"_blank\">RStudio Markdom (Rmd)</a>  \n",
+    "- <a href=\"https://cran.r-project.org/web/packages/codebook/index.html\" target=\"_blank\">Codebook</a>  \n",
+    "- <a href=\"https://github.com/\" target=\"_blank\">Github</a>\n"
    ]
   },
   {
@@ -215,12 +267,12 @@
     "            <li><font size=\"+2\"><a href=\"https://www.anaconda.com\">Anaconda</a> is a scientific Python distribution</font></li>\n",
     "            <li><font size=\"+2\"><a href=\"https://jupyter.org/\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis</font></li>  \n",
     "            <ul>\n",
-    "                <li><font size=\"+2\">Support for Python, R, Julia, and other languages</font></li>  \n",
+    "                <li><font size=\"+2\">Support for JUlia, PYThon, R (JUPYTR) and other languages</font></li>  \n",
     "                <li><font size=\"+2\">This presentation was written in Jupyter notebook</font></li>\n",
     "            </ul>\n",
     "            <li><font size=\"+2\">Spyder is an IDE modelled after MatLab</font></li>\n",
     "                <ul>\n",
-    "                    <li><font size=\"+2\">Also check out <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a></font></li>\n",
+    "                    <li><font size=\"+2\">Most people prefer <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a></font></li>\n",
     "                    <li><font size=\"+2\">Pycharm professional (free to academics) has Science Mode</font></li>  \n",
     "                </ul>\n",
     "        </ul>\n",
@@ -228,7 +280,7 @@
     "    <td>    \n",
     "        <img src=\"img/jupyter-demo.png\">\n",
     "    </td>\n",
-    "</table></h2>"
+    "</table>"
    ]
   },
   {
@@ -242,7 +294,7 @@
     "<table>\n",
     "    <td style=\"text-align:left\">\n",
     "        <ul>\n",
-    "            <li><a href=\"https://www.rstudio.com/\"><font size=\"+2\">RStudio Markdom (Rmd)</font></a></li>\n",
+    "            <li><a href=\"https://www.rstudio.com/\" target=\"_blank\"><font size=\"+2\">RStudio Markdom (Rmd)</font></a></li>\n",
     "            <li><font size=\"+2\">Support for R, Python, and other languages</font></li>\n",
     "            <li><font size=\"+2\">Use codeblocks to create detailed explanations of data processing and analysis</font></li>\n",
     "        </ul>\n",
@@ -261,7 +313,7 @@
     }
    },
    "source": [
-    "<h1><a href=\"https://rubenarslan.github.io/codebook/articles/codebook.html\">Codebook</a></h1>  \n",
+    "<h1><a href=\"https://rubenarslan.github.io/codebook/articles/codebook.html\" target=\"_blank\">Codebook</a></h1>  \n",
     "\n",
     "\n",
     "- automate the following tasks to describe data frames:  \n",
@@ -285,13 +337,15 @@
     "    <li> You can post datasets on Github</li>\n",
     "    <li> You can host websites that explain your data and analysis:</li>\n",
     "        <ul>\n",
-    "            <li>- e.g. <a href=\"https://rubenarslan.github.io/ovulatory_shifts/#table-of-contents\">Ruben Arslan's Ovulagory Shifts site</a>\n",
+    "            <li>- e.g. <a href=\"https://rubenarslan.github.io/ovulatory_shifts/#table-of-contents\" target=\"_blank\">Ruben Arslan's Ovulagory Shifts site</a>\n",
     "            </li>\n",
     "        </ul>\n",
-    "    <li><a href=\"https://github.com/collections/open-data\">GitHub open data collection</a></li>\n",
+    "    <li>You can also host open access slides and presentations, like this <a href= \"https://drfeinberg.github.io/PNB-Open-Science-Summer-Workshop/05-Open-Access-Data.slides.html\" target=\"_blank\">one</a>\n",
+    "    </li>\n",
+    "    <li><a href=\"https://github.com/collections/open-data\" target=\"_blank\">GitHub open data collection</a></li>\n",
     "</ul>\n",
     "\n",
-    "    "
+    "GitHub is now owned by Microsoft.  The open source community has mixed feelings about this.\n"
    ]
   },
   {
@@ -302,11 +356,14 @@
     }
    },
    "source": [
-    "# You don't need fancy coding software to have open access data  \n",
+    "# You don't need to be a programmer to have open access data  \n",
     "\n",
     "- You can use excel  \n",
     "- You can use SPSS and have it record your button presses and translate them into a script  \n",
-    "- You can do whatever you like"
+    "- You can do whatever you like\n",
+    "- Any data sharing is better than none\n",
+    "    - Do what you are comfortable with\n",
+    "    - Each to their own abilities"
    ]
   },
   {
@@ -323,13 +380,6 @@
     "Some materials from\n",
     "https://libraries.mit.edu/data-management/files/2014/05/DataSharingStorage_20170125.pdf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
