--- a/05-Open-Access-Data.ipynb
+++ b/05-Open-Access-Data.ipynb
@@ -154,6 +154,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# <a href=\"https://learn.scholarsportal.info/all-guides/dataverse/\" target=\"_blank\">McMaster Dataverse</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
     }
    },
@@ -217,7 +228,7 @@
    "source": [
     "# Try not to use proprietary software or file formats\n",
     "\n",
-    "- These formats\n",
+    "- Proprietary formats\n",
     "    - can disappear when comanies decide\n",
     "    - are not accessible to many in non-wealthy countries\n",
     "    - do not facilitate open source practices\n"
@@ -400,6 +411,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
