--- a/06-Open-Stimuli.ipynb
+++ b/06-Open-Stimuli.ipynb
@@ -28,7 +28,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Why make stimuli open access if you already give stimuli freely to anyone that asks?\n",
     "  \n",
@@ -168,6 +172,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Use open access software to generate stimuli"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
     }
    },
@@ -216,9 +231,8 @@
     }
    },
    "source": [
-    "# Where to post Open Access Stimuli\n",
-    "\n",
-    "</br></br>\n",
+    "# Where to post Open Access Stimuli  \n",
+    "-----\n",
     "<li><font size=\"+1\"><a href=\"https://dataverse.scholarsportal.info/dataverse/mcmaster/\" target=\"_blank\">McMaster Dataverse</a></font></li>\n",
     "<li><font size=\"+1\"><a href=\"https://figshare.com/\" target=\"_blank\">Open Science Framework</a></font></li>\n",
     "<li><font size=\"+1\"><a href=\"https://figshare.com/\" target=\"_blank\">Figshare</a></font></li>\n",
@@ -412,7 +426,7 @@
     }
    },
    "source": [
-    "# What if you can't make you stimuli by coding or use closed-source software?\n",
+    "# What if you can't make you stimuli by coding or if you use closed-source software?\n",
     "\n",
     "- You can always just share the end product stimuli  \n",
     "- You could make a screen-capture video of you operating the software  \n",
@@ -427,7 +441,7 @@
     }
    },
    "source": [
-    "# Always remember...\n",
+    "# <center>Always remember...</center>\n",
     "<img src=\"img/good_better_best.jpg\" width=50%>"
    ]
   }
@@ -450,6 +464,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
