--- a/04-Registered-Reports.ipynb
+++ b/04-Registered-Reports.ipynb
@@ -97,7 +97,7 @@
     "# Registered Report Workflow\n",
     "\n",
     "\n",
-    "<img src= \"img/registered_report_workflow.png\" width=75%>"
+    "<img src= \"img/registered_report_workflow.png\" width=50%>"
    ]
   },
   {
@@ -150,6 +150,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
