--- a/05-Open-Access-Data.ipynb
+++ b/05-Open-Access-Data.ipynb
@@ -275,16 +275,16 @@
     "<table>\n",
     "    <td style=\"text-align:left\">\n",
     "        <ul>\n",
-    "            <li><font size=\"+2\"><a href=\"https://www.anaconda.com\">Anaconda</a> is a scientific Python distribution</font></li>\n",
-    "            <li><font size=\"+2\"><a href=\"https://jupyter.org/\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis</font></li>  \n",
+    "            <li><font size=\"+2\"><a href=\"https://www.anaconda.com\" target=\"_blank\">Anaconda</a> is a scientific Python distribution</font></li>\n",
+    "            <li><font size=\"+2\"><a href=\"https://jupyter.org/ target=\"_blank\"\">Jupyter notebooks</a> run codeblocks and markdown to create detailed explanations of data processing and analysis</font></li>  \n",
     "            <ul>\n",
     "                <li><font size=\"+2\">Support for JUlia, PYThon, R (JUPYTR) and other languages</font></li>  \n",
     "                <li><font size=\"+2\">This presentation was written in Jupyter notebook</font></li>\n",
     "            </ul>\n",
-    "            <li><font size=\"+2\">Spyder is an IDE modelled after MatLab</font></li>\n",
-    "                <ul>\n",
-    "                    <li><font size=\"+2\">Most people prefer <a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a></font></li>\n",
-    "                    <li><font size=\"+2\">Pycharm professional (free to academics) has Science Mode</font></li>  \n",
+    "            <li><font size=\"+2\">Spyder is an IDE modelled after MatLab</font></li>    \n",
+    "            <li><font size=\"+2\">Most people prefer <a href=\"https://www.jetbrains.com/pycharm/\" target=\"_blank\">PyCharm</a></font></li>\n",
+    "            <ul>\n",
+    "                <li><font size=\"+2\">Pycharm professional (free to academics) has Science Mode</font></li>  \n",
     "                </ul>\n",
     "        </ul>\n",
     "    </td>\n",
